WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316407
SelectFallbackButtonElement should not have styling in base appearance mode
https://bugs.webkit.org/show_bug.cgi?id=316407
Summary
SelectFallbackButtonElement should not have styling in base appearance mode
Anne van Kesteren
Reported
2026-06-05 06:57:05 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-06-05 07:03:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66554
EWS
Comment 2
2026-06-05 23:32:28 PDT
Committed
314693@main
(00e82a4b47c7): <
https://commits.webkit.org/314693@main
> Reviewed commits have been landed. Closing PR #66554 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-05 23:33:12 PDT
<
rdar://problem/178877006
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug