SelectFallbackButtonElement should not have styling in base appearance mode https://bugs.webkit.org/show_bug.cgi?id=316407

Reviewed by Tim Nguyen.

This code was introduced in 306393@main when base appearance was not
yet added. It's separate from the code branching on appearance below
as it needs to apply to None as well.

Tests: imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/customizable-select/select-button-text-and-icon-clipping.html

Upstream: https://github.com/web-platform-tests/wpt/pull/60425
Canonical link: https://commits.webkit.org/314693@main